Suggestion from Claire & Kesley

--- a/index.html
+++ b/index.html
@@ -165,12 +165,7 @@
         <p>
           Deeply literate and observant, Cheverus and his fellow priests were able to keep meticulous records of the sacraments they administered to Boston's Catholics, dating as far back at 1789, during the church's earliest presence in the rapidly developing region.
         </p>
-        <p>
-          Today, these detailed documents are a critical resource for researchers, historians and genealogists, especially for moments when secular records are spotty or lost. They record important moments in the lives of the individuals, families, and communities who transformed the Catholic Church from a minor presence in the Protestant town to the defining religion of a major American city.
-        </p>
-        <p>
-          The story of how Massachusetts's early Catholic Church flourished illustrates how America grew, as new groups arrived and clashed with earlier settlers, disparate communities found common ground, and ancient traditions were absorbed and transformed into new cultures.
-        </p>
+
 
         <!--Seven Sacraments-->
         <div id="seven-sacraments" class="sacraments-wrapper">
@@ -416,18 +411,22 @@
           </div>
         </div>
         <!--End Seven Sacraments-->
-
+        <p>
+          Today, these detailed documents are a critical resource for researchers, historians and genealogists, especially for moments when secular records are spotty or lost. They record important moments in the lives of the individuals, families, and communities who transformed the Catholic Church from a minor presence in the Protestant town to the defining religion of a major American city.
+        </p>
+        <p>
+          The story of how Massachusetts's early Catholic Church flourished illustrates how America grew, as new groups arrived and clashed with earlier settlers, disparate communities found common ground, and ancient traditions were absorbed and transformed into new cultures.
+        </p>
         <!--Slideshow Area-->
 
         <div id="slideshow-block" class="content-popup row volume-database">
-
+          <h3 class="t-center uppercase">From Dusty Volumes To Databases</h3>
           <div class="col-lg-6 slideshow-block-content">
-            <p>Today, these detailed documents are a critical resource for researchers, historians and genealogists, especially for moments when secular records are spotty or lost. They record important moments in the lives of the individuals, families, and communities who transformed the Catholic Church from a minor presence in the Protestant town to the defining religion of a major American city. </p>
-            <p>The story of how Massachusetts's early Catholic Church flourished illustrates how America grew, as new groups arrived and clashed with earlier settlers, disparate communities found common ground, and ancient were absorbed and transformed into new cultures.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non rutrum risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut eget laoreet magna. Aenean sit amet est a lectus pretium dictum. Sed sodales sit amet purus a vehicula. Donec sagittis posuere egestas. Ut ut venenatis diam.</p>
+            <p>Nunc vulputate lobortis lacus quis fermentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer congue purus a tellus fringilla.</p>
           </div>
 
           <div class="col-lg-6 slider-column">
-            <h3 class="t-center uppercase">From Dusty Volumes To Databases</h3>
             <div class="slideshow-wrapper content-popup-wrapper">
               <a href="#" data-toggle="modal" data-target="#myModal">
                 <img src="images/slider-images/slider-image6.jpg" alt="Lowell Bott Mill" />
@@ -668,7 +667,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">The Massachusetts constitution legalizes Catholicism in 1780.</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal1" role="dialog">
                 <div class="modal-dialog">
@@ -735,7 +734,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">Catholics remain scattered across eastern Massachusetts.</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal2" role="dialog">
                 <div class="modal-dialog">
@@ -804,7 +803,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">Leading Protestant public figures and families</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal3" role="dialog">
                 <div class="modal-dialog">
@@ -874,7 +873,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">Aenean vulputate enim eu massa euismod sodales.</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal4" role="dialog">
                 <div class="modal-dialog">
@@ -942,7 +941,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">In 1822, Boston changes its status from town to city.</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal5" role="dialog">
                 <div class="modal-dialog">
@@ -1011,7 +1010,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">A steady number of Catholic immigrants settling</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal6" role="dialog">
                 <div class="modal-dialog">
@@ -1080,7 +1079,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">Ireland’s potato famine, which begins in 1845</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal7" role="dialog">
                 <div class="modal-dialog">
@@ -1149,7 +1148,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">As more Catholics pour into Boston</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal8" role="dialog">
                 <div class="modal-dialog">
@@ -1216,7 +1215,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">Expansion continues as far north as Amesbury</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal9" role="dialog">
                 <div class="modal-dialog">
@@ -1282,7 +1281,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">Sees the first Italian Catholic parish in the United States</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal10" role="dialog">
                 <div class="modal-dialog">
@@ -1348,7 +1347,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">Sees the first Portuguese parish</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal11" role="dialog">
                 <div class="modal-dialog">
@@ -1414,7 +1413,7 @@
                   </button>
                 </div>
               </a>
-
+              <div class="tm-slideshow-caption">Sees first Lithuanian parish</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal12" role="dialog">
                 <div class="modal-dialog">
