--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <!-- Page Styles -->
+    <link rel="stylesheet" href="fonts/Open_Sans/stylesheet.css" />
     <link rel="stylesheet" href="css/bootstrap-slider.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/stylesheet.css" />
-    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="css/all-ie-only.css" />
     <link rel="stylesheet" href="css/stylesheet-responsive.css" />
     <!-- End Page Styles -->
 
     <!-- End CSS Files -->
+   
 
   </head>
 
@@ -615,10 +617,10 @@
         </p>
         <p>
           Ultimately, the majority of French immigrants settled further north in Canada, ​While the Massachusetts Bay Colony was famously established by English Protestants, <span class="underline">there is evidence of Catholic influence in the New England area as early as the 17th century</span>. Starting in 1603, French colonists established settlements at the St. Croix River and explored as far south as Cape Cod.
-          <div class="floated-box f-left">
+          <span class="floated-box f-left">
             <img src="images/baycolony.gif" alt="Bay Colony"/>
             <span class="image-caption-content t-center">While the Massachusetts Bay Colony was famously established by English Protestants, there is evidence of Catholic influence in the New England area as early as the 17th century.</span>
-          </div>
+          </span>
           Ultimately, the majority of French immigrants settled further north in Canada, but these early ties to New England would set the stage for future relationships in the Catholic community.
         </p>
 
