--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
             <!--- Timeline content 1 start--->
             <div id="parish_1780_1789" class="tm-content-row active content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal1">
-                <img src="images/timeline-images/timeline-image1.jpg" alt="Lowell Bott Mill" />
+                <img src="images/timeline-images/1780_RoadToDorchester_byDesBarres" alt="A 1781 View of Boston from the Road to Dorchester by artist Des Barres." />
                 <div class="button-container">
                   <button class="slideshow-btn btn site-button">
                     <i class="fa fa-clone btn-icon" aria-hidden="true"></i>
