--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 
         <!-- Header -->
         <h1 class="header section-title">Growth of the Catholic Church in Greater Boston</h1>
-        <h6 class="note">(Lorem Ipsum is simply dummy text of the printing and typesetting industry)</h6>
+        <h6 class="note">Click or drag along the timeline to see the parish growth in Greater Boston from the earliest records through 1900. Click each gold pointer on the map to see more information on individual parishes. Expand the slideshow on the right to see and read more about the historical moments in the Boston Catholic community.</h6>
         <!--Catholic church block Area-->
 
         <div id="catholic-church-block" class="row cath-church-elments-wrapper">
@@ -661,7 +661,7 @@
             <!--- Timeline content 1 start--->
             <div id="parish_1780_1789" class="tm-content-row active content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal1">
-                <img src="images/timeline-images/1780_RoadToDorchester_byDesBarres" alt="A 1781 View of Boston from the Road to Dorchester by artist Des Barres." />
+                <img src="images/timeline-images/1780_RoadToDorchester_byDesBarres.png" alt="A 1781 View of Boston from the Road to Dorchester by artist Des Barres." />
                 <div class="button-container">
                   <button class="slideshow-btn btn site-button">
                     <i class="fa fa-clone btn-icon" aria-hidden="true"></i>
@@ -687,10 +687,10 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                               <div class="item active">
-                                <img src="images/timeline-images/timeline-image1.jpg" alt="timeline-image1"/>
+                                <img src="images/timeline-images/1780_HolyCross_interior.jpg" alt="A rare interior view of the original Cathedral of the Holy Cross, before it was demolished in the 1860s when the larger South End building of the same name was constructed."/>
                               </div>
                               <div class="item">
-                                <img src="images/timeline-images/timeline-image2.jpg" alt="timeline-image2"/>
+                                <img src="images/timeline-images/1780_RoadToDorchester_byDesBarres.png" alt="A 1781 View of Boston from the Road to Dorchester by artist Des Barres."/>
                               </div>
                             </div>
                             <!-- Indicators -->
@@ -712,7 +712,7 @@
                         <div class="col">
                           <p>
                             The Massachusetts constitution legalizes Catholicism in 1780. A parish of French and Irish Catholics begin worshipping in a small brick French Protestant meeting house located on the south side of School Street in Boston. It’s there that the first public mass is celebrated in 1788.
-                            These early sacramental records include the first official Catholic baptisms in Boston, in this case presided over by the French priest Florent Bouchard de la Poterie, who will later be deposed for “unworthy conduct.”
+                            These early sacramental records include the first official Catholic baptisms in Boston, in this case presided over by the French priest Florent Bouchard de la Poterie, who will later be deposed for "unworthy conduct."
                           </p>
                         </div>
                       </div>
@@ -916,10 +916,7 @@
                           </div>
                         </div>
                         <div class="col">
-                          <p>Aenean vulputate enim eu massa euismod sodales. Pellentesque mollis justo eget odio sagittis pulvinar.
-                            Praesent enim nibh, rutrum eu efficitur a, accumsan quis ante. Morbi fringilla lorem non dui mattis, eget pharetra diam ultricies.
-                            Vivamus interdum nisi non est tempus, sit amet posuere erat lobortis. Proin fermentum erat id dolor condimentum,
-                            quis condimentum velit commodo. Etiam vel ligula mi. Nunc neque lacus, vestibulum eget nulla vitae, eleifend blandit elit.
+                          <p>In the 1810s, the city of Boston grows alongside the rest of the young country as New World trading and manufacturing companies launch to great success. Nationally, this decade sees the creation of the stars and stripes insignia and the writing of "The Star Spangled Banner." Locally, the population of Boston booms to around 40,000, a workforce that would prove crucial for the infancy of the American Industrial Revolution along its waterways. Having committed the engineering details of English and Scottish power looms to memory in secret, a young Francis Cabot Lowell returns to Massachusetts in 1812 and founds The Boston Manufacturing Company. For a detailed look at the relationship between the textile industry and the growth of the Catholic Church, see our section on the Lowell Mills.
                           </p>
                         </div>
                       </div>
@@ -1122,11 +1119,7 @@
                           </div>
                         </div>
                         <div class="col">
-                          <p>
-                            Ireland’s potato famine, which begins in 1845, drives tens of thousands of working-class Irish to Boston’s shores.
-                            During this decade, the city’s population balloons from 93,000 to 136,000, a trend that will continue into the next century.
-                            More Catholic churches are built to accommodate the new arrivals, including one in the South Shore (St. Mary, 1840, Quincy/Norfolk County)
-                            and Southern MA (Saint Thomas Aquinas, 1848, Bridgewater/Plymouth County).
+                          <p>Ireland’s potato famine, which begins in 1845, drives tens of thousands of working-class Irish to Boston’s shores. During this decade, the city’s population balloons from 93,000 to 136,000, a trend that will continue into the next century. More Catholic churches are built to accommodate the new arrivals, expanding into Norfolk and Plymouth counties on the South Shore, starting with Quincy’s St. Mary in 1840 and Bridgewater’s St. Thomas Aquinas in 1848.
                           </p>
                         </div>
                       </div>
@@ -1258,8 +1251,7 @@
                           </div>
                         </div>
                         <div class="col">
-                          <p>
-                            Expansion continues as far north as Amesbury and as far west as Concord, while Merrimack River Valley and what is now the Metro Boston area sees an increase in parishes.
+                          <p>While expansion of the church continues outward from the Boston area, seeing parishes founded as far north as Amesbury, the Greater Boston Catholic community grows as well. In the 1860s, the original Holy Cross Cathedral is demolished to make way for its much larger successor in the South End. Additionally, Massachusetts plays a significant role in the American Civil War, as a long time center of abolitionist thought and activism. The choice by many Catholic immigrants to take up the Union cause had the lasting effect of softening anti-Catholic prejudice in the North.
                           </p>
                         </div>
                       </div>
@@ -1324,8 +1316,7 @@
                           </div>
                         </div>
                         <div class="col">
-                          <p>
-                            Sees the first Italian Catholic parish in the United States (Saint Leonard of Port Maurice, 1873) in Boston's North End.
+                          <p>In 1871, after decades of conflict, the Kingdom of Italy consolidated the city-states along the Italian peninsula into a single nation. Facing new economic difficulties under the regime, and encouraged by the call for laborers in America following the death tolls of the Civil War, many Italians made their way to the United States. Despite regional differences, in Boston, Italian immigrants famously settled together in the North End neighborhood. Saint Leonard of Port Maurice, founded there in 1873 to serve this growing population, was the first Italian Catholic parish in the country as well as the city.
                           </p>
                         </div>
                       </div>
@@ -1390,8 +1381,7 @@
                           </div>
                         </div>
                         <div class="col">
-                          <p>
-                            Sees the first Portuguese parish (Our Lady of Good Voyage, 1889, Gloucester-- seems relevant to the fishing industry there).
+                          <p>While Portuguese Jews had come to New England since the 18th century to escape persecution, Portuguese Catholics from the mainland as well as the Azores and Cape Verde islands arrived to the region’s coastal cities in large number near the end of the 19th century. While some worked in the booming textile mills or other industries, many brought their skills in whaling and fishing. Our Lady of Good Voyage, founded in 1889 in the port town of Gloucester on the North Shore, was the area’s first Portuguese parish. It’s name evokes the significance that both work and faith played in the fraternity of Portuguese-American Catholics.
                           </p>
                         </div>
                       </div>
@@ -1456,8 +1446,7 @@
                           </div>
                         </div>
                         <div class="col">
-                          <p>
-                            Sees first Lithuanian parish (Saint Rocco/Saint Casimir, 1898, Brockton)
+                          <p>Much like the Irish, Lithuanian Catholics arrived in the United States in high numbers following a great famine and political turmoil at home. At the time, many were considered Russian or Polish to American immigration ports and on paper, but national and cultural identity was strong among the immigrant community. Saint Rocco, later Saint Casimir, was the first Lithuanian Catholic parish in Greater Boston, founded in 1898 in Brockton.
                           </p>
                         </div>
                       </div>
