--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <!-- Logo Area -->
           <div class="logo f-left">
             <!-- Logo Link -->
-            <a href="#home" class="logo-link scroll">
+            <a href="https://www.americanancestors.org/index.aspx" class="logo-link scroll">
               <!-- Logo Image / data-second-logo for only white nav -->
-              <img src="images/logo.png" alt="Site Logo" />
+              <img src="images/logo.png" alt="AmericanAncestors.org" />
             </a>
           </div>
           <!-- End Logo Area -->
