--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
 
           <div id="timeline-content-container" class="col-lg-6 tm-slider-botttom-wrapper">
 
-            <!--- Timeline content 1 start--->
+            <!--- Timeline content 1 start -->
             <div id="parish_1780_1789" class="tm-content-row active content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal1">
                 <img src="images/timeline-images/1780_RoadToDorchester_byDesBarres.png" alt="A 1781 View of Boston from the Road to Dorchester by artist Des Barres." />
