--- a/index.html
+++ b/index.html
@@ -723,9 +723,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 1--->
+            <!--- End of Timeline content 1 -->
 
-            <!--- Timeline content 2 start--->
+            <!--- Timeline content 2 start -->
             <div id="parish_1790_1799" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal2">
                 <img src="images/timeline-images/timeline-image2.jpg" alt="Lowell Bott Mill" />
@@ -792,9 +792,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 2--->
+            <!--- End of Timeline content 2 -->
 
-            <!--- Timeline content 3 start--->
+            <!--- Timeline content 3 start -->
             <div id="parish_1800_1809" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal3">
                 <img src="images/timeline-images/timeline-image3.jpg" alt="Lowell Bott Mill" />
@@ -862,9 +862,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 3--->
+            <!--- End of Timeline content 3 -->
 
-            <!--- Timeline content 4 start--->
+            <!--- Timeline content 4 start -->
             <div id="parish_1810_1819" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal4">
                 <img src="images/timeline-images/timeline-image4.jpg" alt="Lowell Bott Mill" />
@@ -927,9 +927,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 4--->
+            <!--- End of Timeline content 4 -->
 
-            <!--- Timeline content 5 start--->
+            <!--- Timeline content 5 start -->
             <div id="parish_1820_1829" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal5">
                 <img src="images/timeline-images/timeline-image5.jpg" alt="Lowell Bott Mill" />
@@ -996,9 +996,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 5--->
+            <!--- End of Timeline content 5 -->
 
-            <!--- Timeline content 6 start--->
+            <!--- Timeline content 6 start -->
             <div id="parish_1830_1839" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal6">
                 <img src="images/timeline-images/timeline-image6.jpg" alt="Lowell Bott Mill" />
@@ -1065,9 +1065,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 6--->
+            <!--- End of Timeline content 6 -->
 
-            <!--- Timeline content 7 start--->
+            <!--- Timeline content 7 start -->
             <div id="parish_1840_1849" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal7">
                 <img src="images/timeline-images/timeline-image7.jpg" alt="Lowell Bott Mill" />
@@ -1130,9 +1130,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 7--->
+            <!--- End of Timeline content 7 -->
 
-            <!--- Timeline content 8 start--->
+            <!--- Timeline content 8 start -->
             <div id="parish_1850_1859" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal8">
                 <img src="images/timeline-images/timeline-image8.jpg" alt="Lowell Bott Mill" />
@@ -1197,9 +1197,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 8--->
+            <!--- End of Timeline content 8 -->
 
-            <!--- Timeline content 9 start--->
+            <!--- Timeline content 9 start -->
             <div id="parish_1860_1869" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal9">
                 <img src="images/timeline-images/timeline-image1.jpg" alt="Lowell Bott Mill" />
@@ -1262,9 +1262,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 9--->
+            <!--- End of Timeline content 9 -->
 
-            <!--- Timeline content 10 start--->
+            <!--- Timeline content 10 start -->
             <div id="parish_1870_1879" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal10">
                 <img src="images/timeline-images/timeline-image2.jpg" alt="Lowell Bott Mill" />
@@ -1327,9 +1327,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 10--->
+            <!--- End of Timeline content 10 -->
 
-            <!--- Timeline content 11 start--->
+            <!--- Timeline content 11 start -->
             <div id="parish_1880_1889" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal11">
                 <img src="images/timeline-images/timeline-image3.jpg" alt="Lowell Bott Mill" />
@@ -1392,9 +1392,9 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 11--->
+            <!--- End of Timeline content 11 -->
 
-            <!--- Timeline content 12 start--->
+            <!--- Timeline content 12 start -->
             <div id="parish_1890_1900" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal12">
                 <img src="images/timeline-images/timeline-image4.jpg" alt="Lowell Bott Mill" />
@@ -1457,7 +1457,7 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 12--->
+            <!--- End of Timeline content 12 -->
 
 
           </div>
