--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
         <h1 class="header section-title">Humble Beginnings</h1>
         <!-- Header Text -->
         <p class="text-bold t-center">
-          ​In the summer of 1797, an earnest young French priest named Jean-Louis Lefebvre de Cheverus arrived in Boston, eager to help American Catholics any way he could. He wrote to John Carroll, Bishop of the New England Church, requesting to be sent where he "was most needed, without making yourself anxious about the means of my support. I am willing to work with my hands, if need be."
+          In the summer of 1797, an earnest young French priest named Jean-Louis Lefebvre de Cheverus arrived in Boston, eager to help American Catholics any way he could. He wrote to John Carroll, Bishop of the New England Church, requesting to be sent where he "was most needed, without making yourself anxious about the means of my support. I am willing to work with my hands, if need be."
         </p>
         <div class="floated-box f-left">
-          <img src="images/article-image3.jpg" alt="Article image"/>
-          <span class="image-caption-content t-center">​​Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.</span>
+          <img src="images/article-image3.jpg" alt="Jean-Louis Anne Madelain Lefebvre de Cheverus"/>
+          <span class="image-caption-content t-center">Jean-Louis Anne Madelain Lefebvre de Cheverus, as Bishop Cheverus. Painting by Gilbert Stuart, 1823. Museum of Fine Arts, Boston.</span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
