--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">Water is poured three times on the recipient’s head, removing original sin and welcoming the baptized into the Church.</div>
+                              <div class="summary">An individual, usually an infant within days of birth, is immersed in water or has water poured over their head. This act symbolized Christ’s burial and resurrection. Records generally include the child’s name, birth and baptism date, parents, sponsors (Godparents), and the officiating priest.</div>
                             </div>
                           </div>
                         </div>
