--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">Sacred oil is used to anoint the recipient. This rite strengthens baptismal grace and deepens the recipient’s relationship with the Holy Spirit.</div>
+                              <div class="summary">As adolescents or young adults, individuals renew the promises of faith from their baptism, and are anointed with a perfumed oil. A bishop is required to consecrate this sacrament unless a priest has been given the authority. Since the ceremony is often performed in a group of individuals, records generally include the date, officiant, and list of recipients.</div>
                             </div>
                           </div>
                         </div>
@@ -264,7 +264,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">The recipient consumes the host and wine, which have been transformed into Christ’s body and blood. This helps a Catholic grow in the likeness of Christ and his or her commitment to Christ’s teachings.</div>
+                              <div class="summary">The eating and drinking of ceremonial bread and wine symbolizes the body and the blood of Jesus Christ, as well as the gifts of God and nature and the works of human hands. These records are generally very brief and include the date, officiating priest, and names of receiving individuals.</div>
                             </div>
                           </div>
                         </div>
@@ -297,7 +297,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">Catholics privately admit sins to a priest, who may offer absolution and recommend steps – called penance -- to remedy the disorder the sin caused. Absolution reconciles Catholics to God.</div>
+                              <div class="summary">At least once per year, individuals confess sins to a legitimate minister, and profess genuine sorrow for them and intention to reform themselves. In this act, they are reconciled with God and the Church. Records may not reflect confessions since they are generally done in confidence with the minister.</div>
                             </div>
                           </div>
                         </div>
@@ -334,7 +334,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">Also known as Last Rights, this sacrament is given to both the dying and to the gravely ill, for the recovery of their health and to sustain their spiritual strength.</div>
+                              <div class="summary">Also known as Last Rites, a priest anoints a dangerously ill individual with oil that has been consecrated by a bishop and prays for their relief and spiritual salvation. There are few records of this sacrament, though those that exist tend to include the name of the individual, the location of the visit, and a brief description of their illness and the sacraments received.</div>
                             </div>
                           </div>
                         </div>
@@ -367,7 +367,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">When performed in the Church, this union between a man and a woman reflects the love that unites Christ and the Church.</div>
+                              <div class="summary">A baptized male and female may willingly enter into marriage through the Church. Unlike civil marriage, Catholic matrimony tends to be a lifelong binding agreement, and entails many responsibilities for the couple. Marriage records generally include the names of the individuals, the date, the names of two witnesses, the officiating priest, and sometimes the couple’s parents, their address, place of origin, and other details.</div>
                             </div>
                           </div>
                         </div>
@@ -400,7 +400,7 @@
                         <div class="description">
                           <div class="description-container">
                             <div class="description-scroller">
-                              <div class="summary">A bishop must perform this rite to make a Catholic male a bishop, a priest or a deacon. This sacrament confers on the recipient the power to celebrate the sacraments and other liturgical acts.</div>
+                              <div class="summary">This sacrament, usually administered by a bishop, allows a baptized and confirmed male over the age of 25 to serve as a deacon, priest, or bishop. After significant preparation, the individual is entrusted with the spiritual leadership, governing, teaching, and sanctifying of his community.</div>
                             </div>
                           </div>
                         </div>
